--- a/FaceLook/HomeTableViewCell.xib
+++ b/FaceLook/HomeTableViewCell.xib
@@ -11,75 +11,71 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="110" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="FaceLook" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatarImage" translatesAutoresizingMaskIntoConstraints="NO" id="7Do-hj-xTg">
-                        <rect key="frame" x="0.0" y="5" width="90" height="90"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PersonAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="7Do-hj-xTg">
+                        <rect key="frame" x="20" y="5" width="90" height="90"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="90" id="2DK-Bj-o6b"/>
-                            <constraint firstAttribute="width" constant="90" id="EZN-Hb-4mB"/>
+                            <constraint firstAttribute="width" constant="90" id="C0w-HN-yto"/>
+                            <constraint firstAttribute="height" constant="90" id="QCB-Ln-l7a"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="25r-cF-Lcy">
-                        <rect key="frame" x="98" y="9" width="17" height="21"/>
+                        <rect key="frame" x="130" y="9" width="17" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="17" id="TaO-n9-T4D"/>
-                            <constraint firstAttribute="height" constant="21" id="Tzg-68-blt"/>
+                            <constraint firstAttribute="height" constant="21" id="JKP-nB-6sq"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FirstName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YIw-iN-l7I">
-                        <rect key="frame" x="98" y="40" width="78" height="21"/>
+                        <rect key="frame" x="130" y="40" width="78" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="78" id="2oW-lf-7PF"/>
-                            <constraint firstAttribute="height" constant="21" id="IpT-9g-QSF"/>
+                            <constraint firstAttribute="height" constant="21" id="AuF-oJ-yCO"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LastName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLQ-uE-8Tx">
-                        <rect key="frame" x="194" y="40" width="78" height="21"/>
+                        <rect key="frame" x="233" y="40" width="78" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="78" id="Did-Pc-kg2"/>
-                            <constraint firstAttribute="height" constant="21" id="JAK-RK-sm5"/>
+                            <constraint firstAttribute="height" constant="21" id="aKh-2u-ZQF"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WtB-1a-Gb9">
-                        <rect key="frame" x="98" y="70" width="41" height="21"/>
+                        <rect key="frame" x="130" y="70" width="41" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="HHE-NL-0VS"/>
+                            <constraint firstAttribute="height" constant="21" id="fgJ-ZT-Hjd"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 <constraints>
-                    <constraint firstItem="WtB-1a-Gb9" firstAttribute="leading" secondItem="7Do-hj-xTg" secondAttribute="trailing" constant="8" symbolic="YES" id="6JT-MX-zLk"/>
-                    <constraint firstAttribute="bottom" secondItem="7Do-hj-xTg" secondAttribute="bottom" constant="5" id="6jt-fg-rvy"/>
-                    <constraint firstItem="YIw-iN-l7I" firstAttribute="leading" secondItem="7Do-hj-xTg" secondAttribute="trailing" constant="8" symbolic="YES" id="B7P-e9-6oL"/>
-                    <constraint firstAttribute="bottom" secondItem="WtB-1a-Gb9" secondAttribute="bottom" constant="9" id="B8v-uc-sdB"/>
-                    <constraint firstItem="25r-cF-Lcy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="Mg6-TJ-g83"/>
-                    <constraint firstItem="cLQ-uE-8Tx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="Sum-n2-ucz"/>
-                    <constraint firstAttribute="trailing" secondItem="25r-cF-Lcy" secondAttribute="trailing" constant="205" id="Sup-iZ-BRD"/>
-                    <constraint firstItem="25r-cF-Lcy" firstAttribute="leading" secondItem="7Do-hj-xTg" secondAttribute="trailing" constant="8" symbolic="YES" id="UQW-kX-6zG"/>
-                    <constraint firstItem="cLQ-uE-8Tx" firstAttribute="leading" secondItem="YIw-iN-l7I" secondAttribute="trailing" constant="18" id="Wi3-im-EDU"/>
-                    <constraint firstItem="WtB-1a-Gb9" firstAttribute="top" secondItem="YIw-iN-l7I" secondAttribute="bottom" constant="9" id="fMw-d2-axR"/>
-                    <constraint firstItem="YIw-iN-l7I" firstAttribute="top" secondItem="25r-cF-Lcy" secondAttribute="bottom" constant="10" id="grh-iE-B6y"/>
-                    <constraint firstItem="7Do-hj-xTg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="p6N-d6-Exc"/>
-                    <constraint firstAttribute="bottom" secondItem="cLQ-uE-8Tx" secondAttribute="bottom" constant="39" id="sfH-A9-zZN"/>
-                    <constraint firstItem="7Do-hj-xTg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="uYs-Zx-BWY"/>
+                    <constraint firstItem="cLQ-uE-8Tx" firstAttribute="leading" secondItem="YIw-iN-l7I" secondAttribute="trailing" constant="25" id="2z4-MQ-I73"/>
+                    <constraint firstItem="7Do-hj-xTg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="43w-CP-dCT"/>
+                    <constraint firstItem="7Do-hj-xTg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="4T0-QL-cBf"/>
+                    <constraint firstItem="YIw-iN-l7I" firstAttribute="leading" secondItem="7Do-hj-xTg" secondAttribute="trailing" constant="20" id="7Ve-La-vzU"/>
+                    <constraint firstItem="25r-cF-Lcy" firstAttribute="leading" secondItem="7Do-hj-xTg" secondAttribute="trailing" constant="20" id="89a-t4-vYV"/>
+                    <constraint firstItem="cLQ-uE-8Tx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="8tL-bG-E7P"/>
+                    <constraint firstItem="WtB-1a-Gb9" firstAttribute="top" secondItem="YIw-iN-l7I" secondAttribute="bottom" constant="9" id="BNB-yW-7zQ"/>
+                    <constraint firstAttribute="bottom" secondItem="7Do-hj-xTg" secondAttribute="bottom" constant="5" id="Fb6-Of-lJ8"/>
+                    <constraint firstItem="YIw-iN-l7I" firstAttribute="top" secondItem="25r-cF-Lcy" secondAttribute="bottom" constant="10" id="Fdh-Uo-p2u"/>
+                    <constraint firstItem="WtB-1a-Gb9" firstAttribute="leading" secondItem="7Do-hj-xTg" secondAttribute="trailing" constant="20" id="JaU-xE-THW"/>
+                    <constraint firstAttribute="bottom" secondItem="cLQ-uE-8Tx" secondAttribute="bottom" constant="39" id="bKY-SM-nb4"/>
+                    <constraint firstItem="25r-cF-Lcy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="rNt-0c-VKp"/>
+                    <constraint firstAttribute="bottom" secondItem="WtB-1a-Gb9" secondAttribute="bottom" constant="9" id="tOv-34-6My"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -90,13 +86,13 @@
                 <outlet property="idTXT" destination="25r-cF-Lcy" id="ArE-od-Gr4"/>
                 <outlet property="lastNameTXT" destination="cLQ-uE-8Tx" id="AAD-QT-1mv"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="136.60714285714286"/>
+            <point key="canvasLocation" x="195.6521739130435" y="136.60714285714286"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="avatarImage" width="7973" height="7974"/>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="PersonAvatar" width="1280" height="1280"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
